src/test/ui/type-alias-impl-trait/issue-53092-2.stderr
error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> $DIR/issue-53092-2.rs:6:41
   |
LL | const CONST_BUG: Bug<u8, ()> = unsafe { std::mem::transmute(|_: u8| ()) };
   |                                         ^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `[closure@$DIR/issue-53092-2.rs:6:61: 6:68]` (0 bits)
   = note: target type: `Bug<u8, ()>` (this type does not have a fixed size)

error[E0277]: the trait bound `U: From<T>` is not satisfied
  --> $DIR/issue-53092-2.rs:10:5
   |
LL |     |x| x.into()
   |     ^^^^^^^^^^^^ the trait `From<T>` is not implemented for `U`
   |
note: required by a bound in `make_bug`
  --> $DIR/issue-53092-2.rs:9:19
   |
LL | fn make_bug<T, U: From<T>>() -> Bug<T, U> {
   |                   ^^^^^^^ required by this bound in `make_bug`
help: consider restricting type parameter `U`
   |
LL | type Bug<T, U: std::convert::From<T>> = impl Fn(T) -> U + Copy;
   |              +++++++++++++++++++++++

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0512.
For more information about an error, try `rustc --explain E0277`.
